# ncnn-android-yolov8

ncnn-android-yolov8/: README-UPGRADE-CN.md
ncnn-android-yolov8/app/: build.gradle
ncnn-android-yolov8/app/src/main/java/com/tencent/yolov8ncnn/: MainActivity.java  Yolov8Ncnn.java
ncnn-android-yolov8/app/src/main/jni/: CMakeLists.txt  yolo.cpp  yolov8ncnn.cpp
ncnn-android-yolov8/scripts/: add_model.sh  upgrade_android.sh
